<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="music_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_the_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="link_to_user_agreement">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="link_to_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email_default_recipient">valera.sevostyanov@yandex.ru</string>
    <string name="email_default_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_default_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="connection_error">Проблема со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="reload">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="zero_min_zero_sec">00:00</string>
    <string name="mediateca">Медиатека</string>
    <string name="your_mediateca_is_empty">Ваша медиатека пуста</string>
    <string name="you_have_not_created_any_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="create_new_playlist">Новый плейлист</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="finish_playlist_creation">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="required">*Обязательное поле</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="add_to_a_playlist">Добавить в плейлист</string>
    <string name="track_is_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_is_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="do_you_want_to_delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="do_you_want_to_delete_playlist">Хотите удалить плейлист?</string>
    <string name="track_form_for_message">%1$d. %2$s - %3$s (%4$s)</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="file_path">cover_%1$d.jpg</string>
    <string name="no_tracks_in_playlist">В вашем плейлисте нет треков :(</string>
    <plurals name="track_plurals">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="minute_plurals">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>