<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/settings_activity_background_color"
    android:paddingTop="14dp"
    android:paddingStart="16dp"
    tools:context="com.example.playlistmaker.ui.settings.fragment.SettingsFragment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_to_main_screen_from_settings"
                style="@style/ArrowToMainActivity"/>

            <TextView
                android:text="@string/settings"
                style="@style/ActivityHeader"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_of_rows_on_settings_screen"
            android:layout_marginTop="40dp">

            <TextView
                style="@style/SettingsActivityText"
                android:text="@string/black_theme"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/night_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="18dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_of_rows_on_settings_screen">

            <TextView
                style="@style/SettingsActivityText"
                android:text="@string/share_app"/>

            <ImageView
                android:id="@+id/share_app_icon"
                android:layout_width="16dp"
                android:layout_height="18dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/share_app_icon"
                android:layout_marginEnd="16dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_of_rows_on_settings_screen">

            <TextView
                style="@style/SettingsActivityText"
                android:text="@string/write_to_the_support"/>

            <ImageView
                android:id="@+id/write_to_the_support_icon"
                android:layout_width="20dp"
                android:layout_height="18dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/write_to_the_support_icon"
                android:layout_marginEnd="14dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_of_rows_on_settings_screen">

            <TextView
                style="@style/SettingsActivityText"
                android:text="@string/user_agreement"/>

            <ImageView
                android:id="@+id/user_agreement_icon"
                android:layout_width="8dp"
                android:layout_height="14dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/deploy_information_icon"
                android:layout_marginEnd="20dp"/>
        </FrameLayout>

</LinearLayout>
