<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_day_black_night">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_16dp_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_16dp_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <ImageButton
        android:id="@+id/back_arrow_button"
        style="@style/ArrowBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/new_playlist"
        android:text="@string/create_new_playlist"
        style="@style/ActivityHeader"
        android:layout_marginTop="14dp"
        android:layout_marginStart="28dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_arrow_button"/>

    <ImageView
        android:id="@+id/playlist_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/add_playlist_cover_image"
        android:layout_marginTop="42dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/new_playlist"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"
        app:layout_constraintDimensionRatio="1:1"/>

    <EditText
        android:id="@+id/playlist_name_edit_text"
        style="@style/NewPlaylistNameAndDescriptionEditText"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/playlist_cover"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"
        android:hint="@string/playlist_name"
        android:background="@drawable/continuous_outline"/>

    <EditText
        android:id="@+id/playlist_description_edit_text"
        style="@style/NewPlaylistNameAndDescriptionEditText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_edit_text"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"
        android:hint="@string/playlist_description"
        android:background="@drawable/continuous_outline"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_new_playlist_button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/create_playlist_button_selector"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>