<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment"
    android:background="@color/main_activity_background_color"
    android:paddingHorizontal="16dp"
    android:paddingBottom="28dp"
    android:paddingTop="14dp">

        <TextView
            android:id="@+id/playlist_maker_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_on_main_screen"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/search_button"
            style="@style/MainActivityButtonStyle"
            app:icon="@drawable/search_icon"
            android:text="@string/search"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="@dimen/distance_between_main_screen_buttons"
            app:layout_constraintTop_toBottomOf="@id/playlist_maker_text_view"
            app:layout_constraintBottom_toTopOf="@id/music_library_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/music_library_button"
            style="@style/MainActivityButtonStyle"
            app:icon="@drawable/music_library_icon"
            android:text="@string/music_library_button"
            android:layout_marginBottom="@dimen/distance_between_main_screen_buttons"
            app:layout_constraintTop_toBottomOf="@id/search_button"
            app:layout_constraintBottom_toTopOf="@id/settings_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/settings_button"
            style="@style/MainActivityButtonStyle"
            app:icon="@drawable/settings_icon"
            android:text="@string/settings"
            app:layout_constraintTop_toBottomOf="@id/music_library_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>