<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.player.activity.PlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_16dp_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_24dp_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_16dp_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_24dp_boundary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

    <TextView
        android:id="@+id/country_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LeftSideTrackDescriptionOnTrackInfoActivity"
        android:layout_marginBottom="28dp"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"/>

    <TextView
        android:id="@+id/genre_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LeftSideTrackDescriptionOnTrackInfoActivity"
        android:layout_marginBottom="16dp"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/country_section"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"/>

    <TextView
        android:id="@+id/year_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LeftSideTrackDescriptionOnTrackInfoActivity"
        android:layout_marginBottom="16dp"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/genre_section"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"/>

    <TextView
        android:id="@+id/album_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LeftSideTrackDescriptionOnTrackInfoActivity"
        android:layout_marginBottom="16dp"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/year_section"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"/>

    <TextView
        android:id="@+id/duration_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LeftSideTrackDescriptionOnTrackInfoActivity"
        android:layout_marginBottom="16dp"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/album_section"
        app:layout_constraintStart_toStartOf="@id/left_16dp_boundary"/>

    <TextView
        android:id="@+id/track_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RightSideTrackDescriptionOnTrackInfoActivity"
        tools:text="Великобритания"
        app:layout_constraintBottom_toBottomOf="@id/country_section"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"/>

    <TextView
        android:id="@+id/track_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RightSideTrackDescriptionOnTrackInfoActivity"
        tools:text="Rock"
        app:layout_constraintBottom_toBottomOf="@id/genre_section"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"/>

    <TextView
        android:id="@+id/track_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RightSideTrackDescriptionOnTrackInfoActivity"
        tools:text="1965"
        app:layout_constraintBottom_toBottomOf="@id/year_section"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"/>

    <TextView
        android:id="@+id/track_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RightSideTrackDescriptionOnTrackInfoActivity"
        android:layout_marginStart="24dp"
        android:lines="1"
        android:ellipsize="end"
        app:layout_constrainedWidth="true"
        tools:text="Yesterday (Remastered 2009)"
        app:layout_constraintBottom_toBottomOf="@id/album_section"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"
        app:layout_constraintStart_toEndOf="@id/album_section"
        app:layout_constraintHorizontal_bias="1"/>

    <TextView
        android:id="@+id/track_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RightSideTrackDescriptionOnTrackInfoActivity"
        tools:text="5:35"
        app:layout_constraintBottom_toBottomOf="@id/duration_section"
        app:layout_constraintEnd_toEndOf="@id/right_16dp_boundary"/>

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:src="@drawable/play_button_icon"
        android:background="@drawable/circle_button"
        android:backgroundTint="@color/white_day_black_night"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/duration_section"/>

    <ImageButton
        android:id="@+id/add_to_playlist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_button_icon"
        android:background="@drawable/circle_button"
        app:layout_constraintTop_toTopOf="@id/play_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintStart_toStartOf="@id/left_24dp_boundary"/>

    <ImageButton
        android:id="@+id/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/like_button_icon"
        android:background="@drawable/circle_button"
        app:layout_constraintTop_toTopOf="@id/play_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/right_24dp_boundary"/>

    <TextView
        android:id="@+id/playing_progress_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/zero_min_zero_sec"
        android:textSize="14sp"
        android:textColor="@color/black_day_white_night"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_button"/>

    <TextView
        android:id="@+id/artist_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        tools:text="The Beatles dsfkjh asdfkjh dsajf hdsafjh dasjkf hsadkfj  adsfkj hsdaf j"
        android:textSize="14sp"
        android:textColor="@color/black_day_white_night"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="400"
        android:lines="1"
        android:ellipsize="end"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/left_24dp_boundary"
        app:layout_constraintEnd_toEndOf="@id/right_24dp_boundary"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/track_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        tools:text="Yesterday (Remastered 2009)"
        android:textSize="22sp"
        android:textColor="@color/black_day_white_night"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="400"
        android:lines="1"
        android:ellipsize="end"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/left_24dp_boundary"
        app:layout_constraintEnd_toEndOf="@id/right_24dp_boundary"
        app:layout_constraintBottom_toTopOf="@id/artist_name_title"
        app:layout_constraintHorizontal_bias="0"/>

    <ImageButton
        android:id="@+id/back_to_search_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:srcCompat="@drawable/arrow_back_icon"
        app:tint="@color/black_day_white_night"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/track_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        tools:src="@drawable/track_icon_mock"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/left_24dp_boundary"
        app:layout_constraintEnd_toEndOf="@id/right_24dp_boundary"
        app:layout_constraintBottom_toTopOf="@id/track_name_title"
        app:layout_constraintTop_toBottomOf="@id/back_to_search_activity_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>