<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_day_black_night"
    android:paddingTop="14dp"
    android:paddingStart="@dimen/start_and_end_paddings_of_activity_search"
    android:paddingEnd="@dimen/start_and_end_paddings_of_activity_search">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/to_main_screen_from_search"
            style="@style/ArrowToMainActivity"/>

        <TextView
            android:text="@string/search"
            style="@style/SearchAndSettingsActivityHeader"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/layout_with_rounded_corners"
        app:cornerRadius="10dp">
        
        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="13dp"
            android:layout_gravity="center"
            android:src="@drawable/search_icon"
            app:tint="@color/grey2_day_black_night"/>

        <EditText
            android:id="@+id/searchEditTextInSettingsActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:hint="@string/search"
            android:inputType="text"
            android:textSize="16sp"
            android:textColorHint="@color/grey2_day_black_night"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:maxLines="1"
            android:textColor="@color/black_day_black_night"
            android:background="@null"
            android:saveEnabled="false"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/clearingCrossInSettingActivity"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginEnd="13dp"
            android:layout_gravity="center"
            android:src="@drawable/cross_icon"
            android:visibility="gone"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_list_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/connection_error"
            android:visibility="gone"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/error_message"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="19sp"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:textColor="@color/black_day_white_night"
            tools:text="@string/connection_error"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_image"
            app:layout_constraintBottom_toTopOf="@id/reload_search_button"/>

        <Button
            android:id="@+id/reload_search_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="54dp"
            android:backgroundTint="@color/black_day_white_night"
            android:text="@string/reload"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:textColor="@color/white_day_black_night"
            android:lines="1"
            android:gravity="center"
            android:paddingHorizontal="14dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_message"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>
